@@ -5,6 +5,7 @@
 	  lvalues (++, --, &=, etc)
 	* implemented parse-time checks for hard typing in += operator
 	* implemented parse-time checks for hard typing in -= operator
+	* implemented parse-time checks for hard typing in *= and /= operators
 
 2009.11.27: David Nichols
 	* implemented a new warning: "non-existant-method-call" - this is for
